Increase font size on small screens on contact form, and fix box shadow on contact form

--- a/src/pages/less/contact.less
+++ b/src/pages/less/contact.less
@@ -66,6 +66,10 @@
     position: relative;
     margin-top: 60px;
 
+    @media (min-width: @sm-min) {
+      height: 620px;
+    }
+
     .shadow-box {
       position: absolute;
       top: 0;
@@ -81,10 +85,7 @@
       @media (min-width: @sm-min) {
         width: 50%;
         max-width: 700px;
-      }
-
-      @media (min-width: @lg-min) {
-        height: 580px;
+        height: 590px;
       }
     }
 
@@ -92,22 +93,17 @@
       box-sizing: border-box;
       background-color: white;
       line-height: 1.5;
-      height: 420px;
       margin: auto;
-      padding: 20px 40px;
+      padding: 20px 40px 0;
       text-align: left;
-
-      @media (min-width: @lg-min) {
-        height: 600px;
-      }
 
       input::placeholder {
         font-family: "FuturaMedium";
-        font-size: 12px;
+        font-size: 16px;
         letter-spacing: 0px;
         color: @quaternary-text-color;
 
-        @media (min-width: @lg-min) {
+        @media (min-width: @sm-min) {
           font-size: 22px;
         }
       }
@@ -124,9 +120,9 @@
         font-family: "FuturaMedium";
         height: 35px;
         margin-top: 10px;
-        font-size: 12px;
+        font-size: 16px;
 
-        @media (min-width: @lg-min) {
+        @media (min-width: @sm-min) {
           height: 35px;
           font-size: 22px;
           padding-top: 30px;
@@ -192,15 +188,15 @@
         font-family: "FuturaMediumOblique";
         color: @tertiary-text-color;
         font-style: italic;
-        font-size: 10px;
+        font-size: 14px;
 
-        @media (min-width: @lg-min) {
+        @media (min-width: @sm-min) {
           font-size: 16px;
         }
       }
 
       .asterisk:before {
-        font-size: 12px;
+        font-size: 16px;
         content: "*";
         color: red;
         position: relative;
@@ -208,7 +204,7 @@
         margin-right: 1px;
         font-style: normal;
 
-        @media (min-width: @lg-min) {
+        @media (min-width: @sm-min) {
           font-size: 22px;
         }
       }
@@ -217,6 +213,14 @@
         width: 100%;
       }
     }
+  }
+
+  .contact-form-container:after {
+    width: auto;
+    display: block;
+    content: " ";
+    background-color: white;
+    height: 40px;
   }
 }
 
